<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/intro_okr"
    android:orientation="vertical"
    tools:context=".introOKR">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/goal"
                android:layout_gravity="center"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau1"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau2"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau1"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="OKR là gì?"
                    android:textSize="30dp"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau4"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau5"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Các thuộc tính của OKR"
                    android:textSize="30dp"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau6"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau7"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau7"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau8"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau8"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau9"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau10"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau11"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Lợi ích khi dùng OKR"
                    android:textSize="30dp"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau12"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cau13"
                    android:gravity="end|start"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>